# sel4-tee

./: README.md  easy-settings.cmake
LICENSES/: BSD-3-Clause.txt
apps/tee/: CMakeLists.txt  tee.camkes
apps/tee/components/Attestation/: Attestation.camkes  CMakeLists.txt
apps/tee/components/Attestation/src/: attestation.c  base64.c  base64.h  randombytes.c
apps/tee/components/Driver/: CMakeLists.txt  Driver.camkes
apps/tee/components/Driver/src/: driver.c  driver.h
apps/tee/components/Loader/: CMakeLists.txt  Loader.camkes
apps/tee/components/Loader/src/: loader.c
apps/tee/components/REEAPI/: CMakeLists.txt  REEAPI.camkes
apps/tee/components/REEAPI/src/: api.c
apps/tee/components/Runner/: CMakeLists.txt  Runner.camkes
apps/tee/components/Runner/src/: runner.c
apps/tee/components/TA/: CMakeLists.txt  TA.camkes
apps/tee/components/TA/src/: ta.c
apps/tee/components/TA2/: CMakeLists.txt  TA2.camkes
apps/tee/components/TA2/src/: ta.c
apps/tee/components/include/: buffer.h
apps/tee/include/: buffer.h  trusted_apps.h
apps/tee/interfaces/: Application.idl4  Attest.idl4  Hello.idl4  Load.idl4  Offload.idl4  REE.idl4  TA2Interface.idl4  TAInterface.idl4
